--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@
   }
   
   .header{
-    background-image: url(image/desingabck.png);
+    background-image: url(image/newdesign.png);
     width: 100%;
     width:100%;
   background-size: cover;
